--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,7 +1,4 @@
-Ali Afshar <aafshar@gmail.com>
-Ronny Pfannschmidt <Ronny.Pfannschmidt@gmx.de>
-Daniel Neuhäuser <dasdasich@gmail.com>
-Christian Fobel <christian@fobel.net>
+Patrick LUZOLO <eldorplus@gmail.com>
 
 .. note::
-    pygtkhelpers.utils.gsignal/gproperty are taken from kiwi
+    pyGtkHelpers.utils.gsignal/gproperty are taken from kiwi
